2005-05-24 Mikhail Khodjaiants
	Bug 88558: run-to-line not thread oriented.
	The IRunTo* and IJumpTo* interfaces moved to ICStackFrame.
	* ICDebugTarget.java
	* ICStackFrame.java
	* CDebugTarget.java
	* CStackFrame.java
	* CThread.java

2005-05-20 Mikhail Khodjaiants
	Bug 94139: User-defined register groups.
	Added API and group serialization.
	* ICDTLaunchConfigurationConstants.java
	- ICRegisterManager.java
	* ICDebugTarget.java
	+ IPersistableRegisterGroup.java
	+ IRegisterDescriptor.java
	* CRegisterManager.java
	* InternalDebugCoreMessages.properties
	* CDebugTarget.java
	* CoreModelMessages.properties
	* CRegister.java
	+ CRegisterDescriptor.java
	* CRegisterGroup.java

2005-05-12 Mikhail Khodjaiants
	Bug 94905: Error examining structure contents in debugger.
	The structure's elements should inherit the enablement flag from parents.
	* CVariable.java

2005-04-25 Mikhail Khodjaiants
	Update the source search path of the underlyuing debugger when the source 
	containers are changed.
	+ ISourceLookupChangeListener.java
	* CDebugTarget.java
	* CSourceLookupParticipant.java

2005-04-27 Alain Magloire
	Change in the CDI interface
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDISourceManagent.java

2005-04-25 Mikhail Khodjaiants
	Added the new source container type (CDirectorySourceContainer) to provide 
	the UI support for the subfolders search.
	+ CDirectorySourceContainer.java
	+ CDirectorySourceContainerType.java
	* CSourceLookupDirector.java
	* SourceUtils.java
	* InternalSourceLookupMessages.properties
	* plugin.properties
	* plugin.xml

2005-04-25 Alain Magloire
	Changes to the CDI interface.
	+ cdi/org/eclipse/cdt/debug/core/cdi/ICDIAddressLocation.java
	+ cdi/org/eclipse/cdt/debug/core/cdi/ICDIFileLocation.java
	+ cdi/org/eclipse/cdt/debug/core/cdi/ICDIFunctionLocation.java
	+ cdi/org/eclipse/cdt/debug/core/cdi/ICDILineLocation.java
	+ cdi/org/eclipse/cdt/debug/core/cdi/ICDLocator.java
	* cdi/org/eclipse/cdt/debug/core/cdi/ICDLocation.java